# defined-python-client

./: LICENSE.md  README.md  pyproject.toml
examples/: example_usage.py
spec/: openapi.yaml
src/defined_client/: __init__.py  client.py  exceptions.py  resources.py
src/defined_client/services/: __init__.py  hosts.py  pagination.py  routes.py  tags.py
