[project]
name = "defined-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rrajpuro", email = "rarajpuro@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
